deployments/base/cdp-kafka-userjourney-query/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-userjourney-query
spec:
  selector:
    # MatchLabels is not required.
    # Kustomize automatically creates the matchLabels selector
    # Nevertheless we keep the selector here otherwise Idea shows a validation error
    matchLabels:
      app.kubernetes.io/part-of: cdp
      app.kubernetes.io/component: cdp-kafka-userjourney-query
  replicas: 1
  template:
    metadata:
      annotations:
        fluxcd.io/automated: "false"
        log_me: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: /actuator/prometheus
    spec:
      containers:
        - name: application
          image: ippendigital/cdp-kafka-userjourney-query:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 1
              memory: 1000Mi
            requests:
              cpu: 250m
              memory: 500Mi
      serviceAccountName: spring-boot
