deployments/base/cdp-kafka-userjourney-query/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    fluxcd.io/automated: "false"
  name: kafka-userjourney-query
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
